--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-#spring.datasource.url=jdbc:mysql://sprint-database.cpbvg0wee2mz.ap-northeast-2.rds.amazonaws.com:3306/AirBnB
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:db;MODE=MYSQL;
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://sprint-database.cpbvg0wee2mz.ap-northeast-2.rds.amazonaws.com:3306/SPrint
+spring.datasource.username=HangHaeSPrint
+spring.datasource.password=hanghae14sprint
+spring.jpa.hibernate.ddl-auto=update
+
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:db;MODE=MYSQL;
+#spring.datasource.username=sa
+#spring.datasource.password=
+
 
 spring.thymeleaf.cache=false
 
