--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,8 @@ dependencies {
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
-def querydslDir = "$buildDir/generated/querydsl"
+//개발 환경에서 생성된 Q 클래스를 사용할 수 있도록 Generated 디렉토리를 SourceSet에 추가
+def querydslDir = "$buildDir/generated/querydsl" //querydsl 디렉토리 하위에 Entity로 등록한 클래스들이 Q라는 접두사가 붙은 형태로 생성됨
 sourceSets {
 	main.java.srcDirs += [querydslDir]
 }
