--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.6'
 	id 'io.spring.dependency-management' version '1.1.0'
+// querydsl관련 명령어를 gradle탭에 생성해준다. (권장사항)
+// id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
+
 }
 
 group = 'com.example'
@@ -57,7 +60,6 @@ configurations {
 //compileQuerydsl {
 //	options.annotationProcessorPath = configurations.querydsl
 //}
-
 
 tasks.named('test') {
 	useJUnitPlatform()
