--- a/build.gradle
+++ b/build.gradle
@@ -47,17 +47,20 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// s3 의존성주입
+//	compileOnly 'org.springframework.cloud:spring-cloud-starter-aws:2.0.1.RELEASE'
+	implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.1000')
+	implementation 'com.amazonaws:aws-java-sdk-s3'
 }
 
-//개발 환경에서 생성된 Q 클래스를 사용할 수 있도록 Generated 디렉토리를 SourceSet에 추가
-def querydslDir = "$buildDir/generated/querydsl" //querydsl 디렉토리 하위에 Entity로 등록한 클래스들이 Q라는 접두사가 붙은 형태로 생성됨
+def querydslDir = "$buildDir/generated/querydsl"
 sourceSets {
 	main.java.srcDirs += [querydslDir]
 }
 configurations {
 	querydsl.extendsFrom compileClasspath
 }
-
 
 //compileQuerydsl {
 //	options.annotationProcessorPath = configurations.querydsl
